--- a/frontend/src/appPages/site/components/pages/news/NewsMainContent/NewsMainContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/news/NewsMainContent/NewsMainContent.module.scss
@@ -115,24 +115,50 @@
     .pagination {
       display: flex;
       justify-content: center;
-      margin-top: 20px;
+      align-items: center;
+      margin-top: 30px;
       gap: 10px;
 
-      button {
-        padding: 5px 10px;
+      button, span {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 36px;
+        height: 36px;
         border: 1px solid #ccc;
         background-color: #fff;
+        color: #333;
+        font-size: 14px;
         cursor: pointer;
-        transition: background-color 0.3s;
+        transition: all 0.3s ease;
 
-        &:hover {
+        &:hover:not(:disabled) {
           background-color: #f0f0f0;
         }
 
         &.active {
           background-color: #333;
           color: #fff;
+          border-color: #333;
         }
+
+        &:disabled {
+          opacity: 0.5;
+          cursor: not-allowed;
+        }
+      }
+
+      span {
+        border: none;
+        cursor: default;
+
+        &:hover {
+          background-color: transparent;
+        }
+      }
+
+      .navButton {
+        font-weight: bold;
       }
     }
   }
@@ -225,6 +251,13 @@
           .news_end {
             width: 100%;
           }
+        }
+      }
+      .pagination {
+        button, span {
+          width: 30px;
+          height: 30px;
+          font-size: 12px;
         }
       }
     }
