--- a/frontend/src/appPages/site/components/pages/home/GraduatesContent/GraduatesContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/home/GraduatesContent/GraduatesContent.module.scss
@@ -22,6 +22,11 @@
     align-items: flex-start;
     justify-content: space-between;
     gap: 40px;
+    transition: opacity 0.5s ease-in-out;
+
+    &.animating {
+      opacity: 0;
+    }
 
     .title {
       flex: 1;
@@ -32,6 +37,7 @@
         font-size: 1.5rem;
         line-height: 1.5;
         margin-bottom: 20px;
+        transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
       }
 
       span {
@@ -41,6 +47,14 @@
         font-weight: 300;
         color: #6a6a6a;
         margin-bottom: 40px;
+        transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+      }
+
+      &.animating {
+        p, span {
+          transform: translateY(20px);
+          opacity: 0;
+        }
       }
     }
 
@@ -68,6 +82,12 @@
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
       overflow: hidden;
       border-radius: 8px;
+      transition: transform 0.5s ease-in-out;
+
+      &.animating {
+        transform: scale(0.95);
+      }
+
       img {
         width: 100%;
         box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
